# Claude

./: .gitignore  .gitmodules  CATALOG.md  CLAUDE.md  Exploracao_Marketplaces_Plugins.xlsx  INDEX.md  README.md  Relatorio_Updates_Repos_Fonte.docx  SETUP-COMPLETO.md  UPDATE_INSTRUCTIONS.md  marketplace_plugins.py
.github/: pull_request_template.md
.herdr/: spaces
Future-Farm/: Fazenda-Futuro-Pesquisa-Consolidada.docx  Mercado-Burgers-PlantBased-DeepDive.docx
Projetos/: CLAUDE.md
Projetos/memoria-nox/clients/python/: README.md  pyproject.toml
Projetos/memoria-nox/clients/python/nox_mem/: __init__.py  client.py  types.py
Projetos/memoria-nox/clients/python/tests/: test_client.py
Projetos/memoria-nox/sdk/python/: README.md  pyproject.toml
Projetos/memoria-nox/sdk/python/nox_mem_client/: __init__.py  client.py  models.py
Projetos/memoria-nox/sdk/python/tests/: test_client.py
Projetos/memoria-nox/sdk/rust/: Cargo.toml  README.md
Projetos/memoria-nox/sdk/rust/examples/: quickstart.rs
Projetos/memoria-nox/sdk/rust/src/: client.rs  error.rs  lib.rs  types.rs
Projetos/memoria-nox/sdk/rust/tests/: integration_test.rs
agents/: README.md
commands/: learn.md
council-outputs/: council-report-2026-04-17-proatividade-multiagent.html  council-transcript-2026-04-17-proatividade-multiagent.md
docs/: SYSTEM-PAPER-2026-04-24.md  adversarial-models-kimi-glm-grok.md  claude-setup-optimization-2026-04-24.md  cockpit-reference.md  project-detection-guide.md
hooks/: permission-auto.mjs  subagent-start.mjs
prompts/: CLAUDE.md  ralph-ultrawork.md
reports/: update-script-2026-03-30.md  weekly-setup-review-2026-03-22.md  weekly-setup-review-2026-03-23.md  weekly-setup-review-2026-04-14.md
scripts/: HERDR-COCKPIT.md  HERDR-Cockpit.html  add-model-to-agents.js  bump-submodules.sh  clean-allowlist.py  fix-vps-add-anthropic-max-provider.sh  fix-vps-anthropic-explicit.sh  fix-vps-baseurl.sh  fix-vps-cleanup-final.sh  fix-vps-crons-final.sh  fix-vps-crons-gemini-native.sh  fix-vps-crons-heartbeat-fallback.sh  fix-vps-final.sh  fix-vps-gemini-fallback.sh  fix-vps-gemini-native.sh  fix-vps-models-json.sh  fix-vps-openclaw.sh  fix-vps-remove-gemini-openai.sh  fix-vps-restore-native.sh  glm  glm-agent  grok  grok-agent  herdr-agent-cockpit.py  herdr-ao-watch.sh  herdr-auto-reorder.sh  herdr-cockpit-open.sh  herdr-doctor.sh  herdr-git-glance.sh  herdr-hunk-open.sh  herdr-lazygit-focus.sh  herdr-lazygit-open.sh  (+19 more)
(+1883 files in other folders)
