[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nox-mem-client"
version = "1.0.0.post0"
description = "Async Python client for the memoria-nox HTTP API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["memoria-nox", "memory", "nox-mem", "sdk", "client"]

dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "anyio[trio]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nox_mem_client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
